[gd_scene load_steps=6 format=3 uid="uid://c145vvgnhr6u0"]

[ext_resource type="Script" path="res://Scripts/Controller/ContinuarPartida.gd" id="1_j8rly"]
[ext_resource type="Texture2D" uid="uid://cf6b2v527uxsu" path="res://Resources/continue-game-texture.jpg" id="2_7b2t2"]
[ext_resource type="Texture2D" uid="uid://b8uui7tpwcw0v" path="res://Resources/Laberinto1.jpg" id="3_mpdtp"]

[sub_resource type="Theme" id="Theme_aster"]

[sub_resource type="Theme" id="Theme_clsyy"]

[node name="ContinuarPartida" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8rly")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0.478431)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7b2t2")
expand_mode = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelFondo" type="PanelContainer" parent="CanvasLayer"]
self_modulate = Color(1, 1, 1, 0.611765)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelFondo"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelFondo/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Partidas Guardadas"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/PanelFondo/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="ResumePanel" type="PanelContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
theme = SubResource("Theme_aster")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContainerListaPartidas" type="VBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ContainerPartida" type="VBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer/ContainerListaPartidas"]
layout_mode = 2

[node name="NombrePartida" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer/ContainerListaPartidas/ContainerPartida"]
layout_mode = 2
text = "Nombre de la partida"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer/ContainerListaPartidas/ContainerPartida"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="LevelValueLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer/ContainerListaPartidas/ContainerPartida/HBoxContainer"]
layout_mode = 2
text = "Nivel"

[node name="TimeLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer/ContainerListaPartidas/ContainerPartida/HBoxContainer"]
layout_mode = 2
text = "00:00"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer/ContainerListaPartidas/ContainerPartida"]
layout_mode = 2
alignment = 1

[node name="ResultLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer/ContainerListaPartidas/ContainerPartida/HBoxContainer2"]
layout_mode = 2
text = "Resultado"

[node name="DateSaveLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/ResumePanel/MarginContainer/ContainerListaPartidas/ContainerPartida/HBoxContainer2"]
layout_mode = 2
text = "00/00/0000"

[node name="AmpliationPanel" type="PanelContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="NameLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Nombre"

[node name="DateSaveLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "00/00/0000"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Nivel"

[node name="TimeLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "00:00"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_mpdtp")
expand_mode = 5

[node name="ResultLabel2" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resultado"
horizontal_alignment = 1

[node name="DifficultyLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dificultad"

[node name="ModoJuegoLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Modo de juego"

[node name="ModoInteraccionLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Modo de interaccion"

[node name="AlgorithmLabel" type="Label" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer2/HBoxContainer/AmpliationPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Algoritmo"

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/PanelFondo/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="SeleccionarButton" type="Button" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_clsyy")
text = "Continuar"

[node name="AtrasButton" type="Button" parent="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer3/HBoxContainer"]
layout_mode = 2
text = "Atras"

[connection signal="pressed" from="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer3/HBoxContainer/SeleccionarButton" to="." method="_on_seleccionar_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelFondo/VBoxContainer/MarginContainer3/HBoxContainer/AtrasButton" to="." method="_on_atras_button_pressed"]
